# sudoku

./: .editorconfig  .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md  index.html  manifest.json  numelace.js  numelace_bg.wasm
assets/: sw.js
crates/numelace-app/: Cargo.toml
crates/numelace-app/src/: action.rs  action_handler.rs  app.rs  game_factory.rs  history.rs  main.rs  state.rs  view_model_builder.rs
crates/numelace-app/src/persistence/: dto.rs  storage.rs
crates/numelace-app/src/ui/: dialogs.rs  game_screen.rs  grid.rs  icon.rs  input.rs  keypad.rs  layout.rs  mod.rs  settings.rs  sidebar.rs  status_line.rs  toolbar.rs
crates/numelace-core/src/: candidate_grid.rs  digit_grid.rs  lib.rs  position.rs
crates/numelace-core/src/containers/: array_9.rs  bit_set_81.rs  bit_set_9.rs
crates/numelace-game/src/: cell_state.rs  error.rs  game.rs  input.rs  lib.rs
crates/numelace-generator/benches/: generator.rs
crates/numelace-generator/src/: lib.rs
crates/numelace-solver/benches/: backtrack.rs  solver.rs
crates/numelace-solver/src/: backtrack.rs  lib.rs
crates/numelace-solver/src/technique/: hidden_single.rs  naked_single.rs
crates/sudoku-app/src/: app.rs
crates/sudoku-app/src/ui/: dialogs.rs  game_screen.rs  grid.rs  input.rs  keypad.rs  mod.rs  sidebar.rs
crates/sudoku-core/: Cargo.toml
crates/sudoku-core/src/: array_9.rs  bit_set_81.rs  bit_set_9.rs  candidate_board.rs  candidate_grid.rs  digit.rs  digit_candidates.rs  digit_grid.rs  lib.rs  position.rs
crates/sudoku-core/src/containers/: array_81.rs  array_9.rs  bit_set_81.rs  bit_set_9.rs  mod.rs
crates/sudoku-core/src/index/: index_81.rs  index_9.rs
crates/sudoku-game/src/: lib.rs
crates/sudoku-generator/: Cargo.toml
crates/sudoku-generator/examples/: generate_puzzle.rs
crates/sudoku-generator/src/: lib.rs
crates/sudoku-solver/: Cargo.toml
crates/sudoku-solver/src/: backtrack.rs  backtrack_solver.rs  error.rs  lib.rs  technique_solver.rs  testing.rs
crates/sudoku-solver/src/technique/: hidden_single.rs  mod.rs  naked_single.rs
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN_LOG.md  TESTING.md  TODO.md  WORKFLOW.md
docs/design/: sudoku-game.md  sudoku-generator.md
docs/review/review-2026-01-21/: README.md  action.md  response.md  review.md
scripts/: ci.sh  generate_icon_assets  update_icons
