[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A multi-platform Sudoku application with puzzle generation, solving, and interactive features."
readme = "README.md"
repository = "https://github.com/gifnksm/sudoku"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
derive_more = "2.1.1"
eframe = "0.33.3"
proptest = "1.9"
rand = "0.9.2"
rand_pcg = "0.9.0"

sudoku-core = { path = "crates/sudoku-core" }
sudoku-generator = { path = "crates/sudoku-generator" }
sudoku-solver = { path = "crates/sudoku-solver" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_docs = "warn"
