[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Numelace is a multi-platform number-place (Sudoku) application with puzzle generation, solving, and interactive features."
readme = "README.md"
repository = "https://github.com/gifnksm/numelace"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bitflags = "2.10.0"
criterion = "0.8.1"
derive_more = "2.1.1"
eframe = "0.33.3"
egui_extras = "0.33.3"
proptest = "1.9"
rand = "0.9.2"
rand_pcg = "0.9.0"
serde = "1.0.228"

numelace-core = { path = "crates/numelace-core" }
numelace-game = { path = "crates/numelace-game" }
numelace-generator = { path = "crates/numelace-generator" }
numelace-solver = { path = "crates/numelace-solver" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_docs = "warn"
