[package]
name = "sudoku-core"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "error"] }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
