[package]
name = "sudoku-generator"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rand.workspace = true
rand_pcg.workspace = true
sudoku-core.workspace = true
sudoku-solver.workspace = true

[lints]
workspace = true
