[package]
name = "sudoku-solver"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "error", "from"] }
sudoku-core.workspace = true

[lints]
workspace = true
